Fix overlapping issue

--- a/src/style.css
+++ b/src/style.css
@@ -87,6 +87,7 @@ li:hover {
 header {
   width: 100vw;
   position: fixed;
+  z-index : 1
 }
 
 .nav-bar {
@@ -100,6 +101,7 @@ header {
   margin: auto;
   background-color: white;
   padding: 0 10px;
+ 
 }
 
 .logo {
@@ -248,6 +250,7 @@ span {
 
 .img {
   position: relative;
+
 }
 
 .slider-dots {
@@ -261,6 +264,7 @@ span {
   display: flex;
   gap: 10px;
   width: 79px;
+  z-index: 1;
 }
 
 .dot {
